[gd_scene load_steps=7 format=3 uid="uid://d2o3bk5mndera"]

[ext_resource type="Script" path="res://ufo.gd" id="1_6g81a"]
[ext_resource type="Texture2D" uid="uid://drhf0b657hqvs" path="res://ufo.png" id="1_a0ilh"]
[ext_resource type="Texture2D" uid="uid://7nrx3tqtdp8a" path="res://bullet.png" id="3_dmsi6"]
[ext_resource type="AudioStream" uid="uid://b48qceil8naiy" path="res://ufodeath.wav" id="4_et0u5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxk25"]
size = Vector2(16, 7)

[sub_resource type="Gradient" id="Gradient_4pbwg"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="UFO" type="Area2D"]
position = Vector2(48, 21)
scale = Vector2(6, 6)
script = ExtResource("1_6g81a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fxk25")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_a0ilh")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-4.76837e-07, -2.38419e-07)
emitting = false
amount = 50
one_shot = true
speed_scale = 4.0
explosiveness = 0.9
randomness = 0.21
texture = ExtResource("3_dmsi6")
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
radial_accel_min = 100.0
radial_accel_max = 100.0
scale_amount_min = 6.0
scale_amount_max = 6.0
color_ramp = SubResource("Gradient_4pbwg")

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_et0u5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="finished" from="Death" to="." method="_on_cpu_particles_2d_finished"]
